# corridoros

./: -  .gitignore  BUG_FIXES_SUMMARY.md  CORRIDOR_OS_README.md  DEPLOY-STEPS.md  DEPLOYMENT.md  Makefile  RFC-0_CorridorOS.md  TESTING_GUIDE.md  auto-cycle.js  bom_corridor_computer.csv  check-disks.sh  consent_manifest.schema.json  corridor-apps.js  corridor-os-professional-styles.css  corridor-os-professional.js  corridor-os.html  corridor-os.js  corridor-settings.js  corridor-window-manager.js  corridor_cli.py  corridoros_advanced.html  corridoros_dashboard.html  corridoros_simulator.html  create-bootable-iso.py  create-bootable-usb-proper.sh  create-bootable-usb.sh  deploy-corridor-os.sh  deploy-to-new-firebase.sh  deploy.md  deploy.sh  deploy_corridoros.sh  deploy_github_pages.sh  deploy_netlify.sh  deploy_vercel.sh  deploy_vercel_web.sh  docker-compose.yml  firebase-config.js  firebase.json  fix-mozilla-compatibility.html  (+16 more)
.gocache/: trim.txt
CorridorOS/: README.md
cli/: go.mod
corridor-os-portable/: corridor-apps.js  corridor-os.html  corridor-os.js  corridor-settings.js  corridor-window-manager.js  main.js  thermal-model.js
corridor-os-portable/tactile-power-toolkit/: LICENSE  pyproject.toml
corridor-os-portable/tactile-power-toolkit/examples/: design_tileset.py
corridor-os-portable/tactile-power-toolkit/src/tactile_power/: standards.py
corridor-os-ubuntu-boot/: BOOT-CORRIDOR-OS.html  README-UBUNTU.txt  corridor-os.desktop  launch-corridor-ubuntu.sh
corridoros_dev/: server.py
daemon/corrd/: Cargo.toml
daemon/corrd/src/: main.rs
(+1510 files in other folders)
