[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tactile-power-toolkit"
version = "0.1.0"
description = "Design calculators for tactile, genderless power transmission (pads, pogo arrays, inductive/capacitive), with pre-charge and safety heuristics."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Toolkit Authors"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
tactile-power = "tactile_power.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
