[package]
name = "corrd"
version = "0.1.0"
edition = "2021"
authors = ["CorridorOS Team"]
description = "Photonic Corridor Management Daemon"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
prometheus = "0.13"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
